please God. Please let this work.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="background"></div>
     <header>
-      <h1>Guess that number!</h1>
+      <h1>Guess that number! A guessing game for awesome people.</h1>
     </header>
     <main>
       <section>
